--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     This application is provided by Dragynware at no cost and is intended for use as is.
 </p>
 <p>
-    This page is used to inform users of Dragynware's policies with the collection, use, and
-    disclosure of Personal Information if anyone decides to use the mobile application Classic Lingo.
+    This page is used to inform you of Dragynware's policies regarding with the collection, use, and
+    disclosure of Personal Information should you decide to use the mobile application Classic Lingo.
 </p>
 <p>
     If you choose to use this application, then you agree to the collection and use of information in relation to this policy.
@@ -48,7 +48,7 @@
     This application uses Google AdMob for serving advertisements, which is a third party service provided by Google.
 </p>
 <p>
-    You can opt-out of Google Analytics for displaying targeted advertising and by visiting your <a href="https://www.google.com/settings/ads"> Google Ads Settings</a>
+    You can opt-out of Google Analytics for displaying targeted advertising by visiting your <a href="https://www.google.com/settings/ads"> Google Ads Settings</a>
 </p>
 <p>
     Google also recommends installing the <a href="https://tools.google.com/dlpage/gaoptout">Google Analytics Opt-out</a> browser add-on for your web browser. 
@@ -62,7 +62,7 @@
     This application may contain links to external websites. Should you click on a third-party link, you will be directed
     out of the Classic Lingo application and to that website. Note that these external sites are not operated by Dragynware.
     Therefore, it is strongly advised that you review the Privacy Policy of these websites should you navigate outside of
-    the Classic Lingo application via one of these links. Dragynware has no control over and assume no responsibility for
+    the Classic Lingo application via one of these links. Dragynware has no control over and assumes no responsibility for
     the content, privacy policies, or practices of any third-party sites or services.
 </p>
 <p><strong>Changes to This Privacy Policy</strong></p>
