--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </p>
 <p><strong>Log Data</strong></p>
 <p>
-    Whie using Classic Lingo, in cases of errors and/or faults within the application it may be necessary to collect data
+    While using Classic Lingo, in cases of errors and/or faults within the application it may be necessary to collect data
     and information (through third party Android libraries) from your phone called Log Data. Log Data may include information
     such as your device's Internet Protocol (“IP”) address, device name, operating system version, the time and date of the error,
     along with other statistics.
